[package]
name = "whutjwxk"
version = "0.1.1"
description = "A Tauri App"
authors = ["zhxycn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whutjwxk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "cookies", "multipart", "native-tls"] }
aes = "0.8.4"
base64 = "0.22.1"
block-padding = "0.4.2"
hex = "0.4.3"
once_cell = "1.21.3"
ecb = "0.1.2"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_urlencoded = "0.7.1"

